--- a/roxctl/helm/derivelocalvalues/testdata/k8s-resources/hostPath.yaml
+++ b/roxctl/helm/derivelocalvalues/testdata/k8s-resources/hostPath.yaml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -36,7 +36,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -62,7 +62,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -240,7 +240,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -266,7 +266,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -362,7 +362,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -748,7 +748,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -778,7 +778,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -814,7 +814,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -847,7 +847,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -896,7 +896,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -937,7 +937,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -960,7 +960,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -983,7 +983,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1011,7 +1011,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1064,7 +1064,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1114,7 +1114,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1142,7 +1142,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1171,7 +1171,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1199,7 +1199,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1227,7 +1227,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1255,7 +1255,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1283,7 +1283,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1311,7 +1311,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1342,7 +1342,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1370,7 +1370,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
     app: central
   annotations:
@@ -1396,7 +1396,7 @@ spec:
         app.kubernetes.io/name: stackrox
         app.kubernetes.io/part-of: stackrox-central-services
         app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-        app.kubernets.io/component: central
+        app.kubernetes.io/component: central
         helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
       annotations:
         traffic.sidecar.istio.io/excludeInboundPorts: "8443"
@@ -1553,7 +1553,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1578,7 +1578,7 @@ spec:
         app.kubernetes.io/name: stackrox
         app.kubernetes.io/part-of: stackrox-central-services
         app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-        app.kubernets.io/component: scanner
+        app.kubernetes.io/component: scanner
         helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
       annotations:
         traffic.sidecar.istio.io/excludeInboundPorts: "8080,8443"
@@ -1697,7 +1697,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: scanner
+    app.kubernetes.io/component: scanner
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -1722,7 +1722,7 @@ spec:
         app.kubernetes.io/name: stackrox
         app.kubernetes.io/part-of: stackrox-central-services
         app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-        app.kubernets.io/component: scanner
+        app.kubernetes.io/component: scanner
         helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
       annotations:
         traffic.sidecar.istio.io/excludeInboundPorts: "5432"
