--- a/roxctl/helm/derivelocalvalues/testdata/k8s-resources/offlineMode-internalRegistry-nodePortExposure-scannerDisabled.yaml
+++ b/roxctl/helm/derivelocalvalues/testdata/k8s-resources/offlineMode-internalRegistry-nodePortExposure-scannerDisabled.yaml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -36,7 +36,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -62,7 +62,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -424,7 +424,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -454,7 +454,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -483,7 +483,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -532,7 +532,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -556,7 +556,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -584,7 +584,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -636,7 +636,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -665,7 +665,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -693,7 +693,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -721,7 +721,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -749,7 +749,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
   annotations:
     email: support@stackrox.com
@@ -784,7 +784,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
 spec:
   type: NodePort
@@ -806,7 +806,7 @@ metadata:
     app.kubernetes.io/name: stackrox
     app.kubernetes.io/part-of: stackrox-central-services
     app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-    app.kubernets.io/component: central
+    app.kubernetes.io/component: central
     helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
     app: central
   annotations:
@@ -832,7 +832,7 @@ spec:
         app.kubernetes.io/name: stackrox
         app.kubernetes.io/part-of: stackrox-central-services
         app.kubernetes.io/version: 3.0.50.x-60-gac5d043be8
-        app.kubernets.io/component: central
+        app.kubernetes.io/component: central
         helm.sh/chart: stackrox-central-services-50.0.60-gac5d043be8
       annotations:
         traffic.sidecar.istio.io/excludeInboundPorts: "8443"
