Support extra volume mounts in central-services helm chart (#6946)

--- a/image/templates/helm/stackrox-central/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-central/internal/config-shape.yaml
@@ -60,6 +60,7 @@ central:
       port: null # int
     route:
       enabled: null # bool
+  extraMounts: null # [dict]
 
 scanner:
   disable: null # bool
