ROX-5927: Specify preexisting GCP Disk to bind a PV and PVC (#6907)
* ROX-5927: Specify preexisting GCP Disk to bind a PV and PVC

--- a/image/templates/helm/stackrox-central/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-central/internal/config-shape.yaml
@@ -49,6 +49,8 @@ central:
       createClaim: null # bool
       storageClass: null # string
       size: null # int | string
+      volume:
+        volumeSpec: null # dict
     none: null # bool
   exposure:
     loadBalancer:
