ROX-5975: Update helm command used to generate rendered yamls for gcp mp deploy… (#6900)
* Update helm command used to generate rendered yamls for gcp mp deployment
* Update deployer base image
* Allow 'none' imagepullsecrets for central
* get API versions and inject values files
* add groups to app's componentKinds

Co-authored-by: Malte Isberner <mi@stackrox.com>

--- a/image/templates/helm/stackrox-central/templates/00-stackrox-application.yaml
+++ b/image/templates/helm/stackrox-central/templates/00-stackrox-application.yaml
@@ -80,20 +80,40 @@ spec:
       app.kubernetes.io/name: stackrox
 
   componentKinds:
-    - kind: ClusterRole
-    - kind: ClusterRoleBinding
-    - kind: ConfigMap
-    - kind: DaemonSet
-    - kind: Deployment
-    - kind: NetworkPolicy
-    - kind: PersistentVolumeClaim
-    - kind: Pod
-    - kind: Role
-    - kind: RoleBinding
-    - kind: Route
-    - kind: Secret
-    - kind: SecurityContextConstraints
-    - kind: Service
-    - kind: ServiceAccount
-    - kind: ValidatingWebhookConfiguration
+    - group: ''
+      kind: ConfigMap
+    - group: ''
+      kind: Secret
+    - group: ''
+      kind: PersistentVolumeClaim
+    - group: ''
+      kind: Service
+    - group: ''
+      kind: ServiceAccount
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRole
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRoleBinding
+    - group: apps
+      kind: Deployment
+    - group: networking.k8s.io
+      kind: NetworkPolicy
+    - group: rbac.authorization.k8s.io
+      kind: Role
+    - group: rbac.authorization.k8s.io
+      kind: RoleBinding
+    - group: route.openshift.io
+      kind: Route
+    - group: security.openshift.io
+      kind: SecurityContextConstraints
+    - group: admissionregistration.k8s.io
+      kind: ValidatingWebhookConfiguration
+    - group: autoscaling
+      kind: HorizontalPodAutoscaler
+    - group: storage.k8s.io
+      kind: StorageClass
+    - group: networking.istio.io
+      kind: DestinationRule
+    - group: policy
+      kind: PodSecurityPolicy
 {{- end }}
