ROX-5954: Gather individual tests stats and upload failed test details to BigQuery (#6940)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4574,7 +4574,7 @@ jobs:
 
       - run:
           name: Collect and send test jobs stats
-          command: CIRCLE_TOKEN="$CIRCLE_TOKEN_ROXBOT" .circleci/collect-tests-stats.sh "stackrox-ci" "ci_metrics.rox_jobs_stats"
+          command: CIRCLE_TOKEN="$CIRCLE_TOKEN_ROXBOT" .circleci/collect-tests-stats.sh "stackrox-ci" "ci_metrics.rox_jobs_stats" "ci_metrics.rox_failed_tests"
 
 workflows:
   version: 2
